Updated some stuff - WORK IN PROGRESS

--- a/.gitignore
+++ b/.gitignore
@@ -6,91 +6,5 @@
 *.log
 *.bsp
 *.vis
-Q3TEX2WAD/zlib.dll
-Q3TEX2WAD/q3map2.gif
-Q3TEX2WAD/libintl-1.dll
-Q3TEX2WAD/libglib-2.0-0.dll
-Q3TEX2WAD/iconv.dll
-Q3TEX2WAD/extras/lightgrid.shader
-Q3TEX2WAD/extras/common_extra.shader
-Q3TEX2WAD/extras/cel.shader
-Q3TEX2WAD/q3map2.exe
-Q3TEX2WAD/libxml2.dll
-Q3TEX2WAD/libpng12.dll
-Q3TEX2WAD/extras/skip.tga
-Q3TEX2WAD/extras/q3map.shader
-Q3TEX2WAD/extras/listen.pl
-Q3TEX2WAD/extras/antiportal.tga
-Q3TEX2WAD/q3map2src/surface.c
-Q3TEX2WAD/q3map2src/shaders.c
-Q3TEX2WAD/q3map2src/q3map2.vcxproj.user
-Q3TEX2WAD/q3map2src/q3map2.vcxproj.filters
-Q3TEX2WAD/q3map2src/q3map2.vcxproj
-Q3TEX2WAD/q3map2src/q3map2.rc
-Q3TEX2WAD/q3map2src/q3map2.ico
-Q3TEX2WAD/q3map2src/q3map2.h
-Q3TEX2WAD/q3map2src/prtfile.c
-Q3TEX2WAD/q3map2src/portals.c
-Q3TEX2WAD/q3map2src/path_init.c
-Q3TEX2WAD/q3map2src/patch.c
-Q3TEX2WAD/q3map2src/model.c
-Q3TEX2WAD/q3map2src/minimap.c
-Q3TEX2WAD/q3map2src/mesh.c
-Q3TEX2WAD/q3map2src/map.c
-Q3TEX2WAD/q3map2src/decals.c
-Q3TEX2WAD/q3map2src/convert_map.c
-Q3TEX2WAD/q3map2src/convert_bsp.c
-Q3TEX2WAD/q3map2src/convert_ase.c
-Q3TEX2WAD/q3map2src/changelog.q3map1
-Q3TEX2WAD/q3map2src/bspfile_rbsp.c
-Q3TEX2WAD/q3map2src/bspfile_ibsp.c
-Q3TEX2WAD/q3map2src/bspfile_abstract.c
-Q3TEX2WAD/q3map2src/bsp_scale.c
-Q3TEX2WAD/q3map2src/bsp_info.c
-Q3TEX2WAD/q3map2src/bsp_analyze.c
-Q3TEX2WAD/q3map2src/bsp.c
-Q3TEX2WAD/q3map2src/brush_primit.c
-Q3TEX2WAD/q3map2src/brush.c
-Q3TEX2WAD/q3map2src/.vs/q3map2/v16/Browse.VC.db
-Q3TEX2WAD/q3map2src/.vs/q3map2/v16/.suo
-Q3TEX2WAD/q3map2src/game_t.h
-Q3TEX2WAD/q3map2src/game_sof2.h
-Q3TEX2WAD/q3map2src/game_reaction.h
-Q3TEX2WAD/q3map2src/game_quakelive.h
-Q3TEX2WAD/q3map2src/game_quake3.h
-Q3TEX2WAD/q3map2src/game_qfusion.h
-Q3TEX2WAD/q3map2src/game_nexuiz.h
-Q3TEX2WAD/q3map2src/game_jk2.h
-Q3TEX2WAD/q3map2src/game_ja.h
-Q3TEX2WAD/q3map2src/game_etut.h
-Q3TEX2WAD/q3map2src/game_ef.h
-Q3TEX2WAD/q3map2src/game__null.h
-Q3TEX2WAD/q3map2src/fog.c
-Q3TEX2WAD/q3map2src/fixaas.c
-Q3TEX2WAD/q3map2src/facebsp.c
-Q3TEX2WAD/q3map2src/exportents.c
-Q3TEX2WAD/q3map2src/writebsp.c
-Q3TEX2WAD/q3map2src/visflow.c
-Q3TEX2WAD/q3map2src/vis.c
-Q3TEX2WAD/q3map2src/tree.c
-Q3TEX2WAD/q3map2src/tjunction.c
-Q3TEX2WAD/q3map2src/surface_meta.c
-Q3TEX2WAD/q3map2src/surface_fur.c
-Q3TEX2WAD/q3map2src/surface_foliage.c
-Q3TEX2WAD/q3map2src/surface_extra.c
-Q3TEX2WAD/q3map2src/main.c
-Q3TEX2WAD/q3map2src/listen.pl
-Q3TEX2WAD/q3map2src/lightmaps_ydnar.c
-Q3TEX2WAD/q3map2src/lightmaps.c
-Q3TEX2WAD/q3map2src/light_ydnar.c
-Q3TEX2WAD/q3map2src/light_trace.c
-Q3TEX2WAD/q3map2src/light_shadows.c
-Q3TEX2WAD/q3map2src/light_bounce.c
-Q3TEX2WAD/q3map2src/light.c
-Q3TEX2WAD/q3map2src/leakfile.c
-Q3TEX2WAD/q3map2src/image.c
-Q3TEX2WAD/q3map2src/game_wolfet.h
-Q3TEX2WAD/q3map2src/game_wolf.h
-Q3TEX2WAD/q3map2src/game_unvanquished.h
-Q3TEX2WAD/q3map2src/game_tremulous.h
-Q3TEX2WAD/q3map2src/game_tenebrae.h
+*.pts
+Q1Q3UTILITY/24bit/
